--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 </head>
 
 <body>
+    <header class="header">
         <div class="container">
             <h1 class="heading">Suraj Solanki</h1>
             <h2 class="sub-heading">Senior DevOps Engineer</h2>
@@ -23,6 +24,30 @@
     <main class="main">
         <div class="container">
             <section class="section">
+                <h2 class="section-heading">Explore More</h2>
+                <a href="blog.html" class="link">Visit Blog</a>
+                <a href="contact.html" class="link">Contact Me</a>
+            </section>
+
+            <section class="section">
+                <h2 class="section-heading">Connect with Me</h2>
+                <div class="social-links">
+                    <a href="https://www.linkedin.com/in/suraj-solanki/" class="social-link">
+                        <img src="linkedin.png" alt="LinkedIn" width="20" height="20">
+                    </a>
+                    <a href="https://surajblog.medium.com" class="social-link">
+                        <img src="medium.svg" alt="Medium" width="20" height="20">
+                    </a>
+                    <a href="https://www.youtube.com/channel/UCOnzoAgntLFeKEsHWkL2x8A" class="social-link">
+                        <img src="yt.png" alt="YouTube" width="20" height="20">
+                    </a>
+                    <a href="https://www.instagram.com/suraj_inreallife/?hl=en" class="social-link">
+                        <img src="instagram.svg" alt="Instagram" width="20" height="20">
+                    </a>
+                </div>
+            </section>
+
+            <section class="section">
                 <h2 class="section-heading">Certifications</h2>
                 <ul class="certifications">
                     <li><a href="https://www.credly.com/badges/4c3d4dc1-750e-45f3-842a-540ea76370a8/public_url">AWS Certified Solutions Architect – Associate</a></li>
@@ -31,44 +56,8 @@
                     <li><a href="https://www.credly.com/badges/f369d048-7bed-4f08-84f1-ab68c7ab390c/public_url">Microsoft Certified: Azure Fundamentals</a></li>
                     <li><a href="https://www.credly.com/badges/7c7b8ddd-d1c5-41f0-8524-c5bbc39f0584/public_url">HashiCorp Certified: Terraform Associate (002)</a></li>
                     <li><a href="https://www.credly.com/badges/41de68f6-a999-4f96-99ba-96a183e7fc78/public_url">Red Hat Certified System Administrator (RHCSA)</a></li>
-                    <li><a href="https://www.credly.com/badges/7c3c9c74-849a-42ba-b262-35b8e7b08160/public_url">Red Hat Certified OpenShift Administrator</a></li>
+                    <li><a href="https://www.credly.com/badges/989b694e-0e4e-4082-863a-1e41e068d612/public_url">Red Hat Certified System Administrator (RHCSA)</a></li>
                 </ul>
-            </section>
-
-            <section class="section">
-                <h2 class="section-heading">Explore More</h2>
-                <div class="explore-links">
-                    <a href="blog.html" class="explore-link">
-                        <div class="link-box">
-                            <span class="link-title">Visit Blog</span>
-                            <span class="link-description">Read my latest articles and insights</span>
-                        </div>
-                    </a>
-                    <a href="contact.html" class="explore-link">
-                        <div class="link-box">
-                            <span class="link-title">Contact Me</span>
-                            <span class="link-description">Get in touch with me</span>
-                        </div>
-                    </a>
-                </div>
-            </section>
-
-            <section class="section">
-                <h2 class="section-heading">Connect with Me</h2>
-                <div class="social-links">
-                    <a href="https://www.linkedin.com/in/suraj-solanki/" class="social-link">
-                        <img src="linkedin.png" alt="LinkedIn" width="30" height="30">
-                    </a>
-                    <a href="https://surajblog.medium.com" class="social-link">
-                        <img src="medium.svg" alt="Medium" width="30" height="30">
-                    </a>
-                    <a href="https://www.youtube.com/channel/UCOnzoAgntLFeKEsHWkL2x8A" class="social-link">
-                        <img src="yt.png" alt="YouTube" width="30" height="30">
-                    </a>
-                    <a href="https://www.instagram.com/suraj_inreallife/?hl=en" class="social-link">
-                        <img src="instagram.svg" alt="Instagram" width="30" height="30">
-                    </a>
-                </div>
             </section>
         </div>
     </main>
