--- a/contact.html
+++ b/contact.html
@@ -51,7 +51,7 @@
             <a href="https://www.youtube.com/channel/UCOnzoAgntLFeKEsHWkL2x8A" class="social-link">
                 <img src="yt.png" alt="YouTube" width="20" height="20">
             </a>
-            <a href="https://www.instagram.com/suraj_inreallife/?hl=en" class="social-link">
+            <a href="https://www.instagram.com/suraj_inrealife/?hl=en" class="social-link">
                 <img src="instagram.svg" alt="Instagram" width="20" height="20">
             </a>
             </center>
